added jquery animations instead of css animations

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -25,7 +25,7 @@
 
     .nav
         background #1ac6ff
-        height 125px
+        height 0px
         text-align center
         margin 50px 0px  0px -4000px
 
@@ -36,7 +36,7 @@
     .subtitle
         background #fff
         text-align center
-        //animation: fadein 1s;
+        animation: fadein 1s;
         height 50px
 
     lo
@@ -57,14 +57,16 @@
         text-decoration none
 
     li
+        position: relative
+        left 4500px
         display inline-block
         margin 5px 2.5px 5px 2.5px
         background-color white
-        opacity: 0;
-        animation: flyin 1s;
-        animation-timing-function: ease-out; 
-        animation-fill-mode: forwards;
-        animation-delay: 0.625s;
+        //opacity: 0;
+        //animation: flyin 1s;
+        //animation-timing-function: ease-out; 
+        //animation-fill-mode: forwards;
+        //animation-delay: 0.625s;
 
     //li-primary
        // display inline-block
