--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -15,7 +15,7 @@ html
         ul.nav
             li: a.large(href'/') &nbsp;
             li: a.large-blue(href'/') About Me
-            li: a(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
