added single functionality

--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -21,8 +21,8 @@ html
             li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
             li: a.large(href='/') &nbsp;
-            li: a.large(href='#zd') &nbsp; 
-            li: a.large(href='#th') &nbsp;
+            li: a.large(href='#') &nbsp; 
+            li: a.large(href='#') &nbsp;
             li: a.large(href='#coursework') My Story 
             li: a.large(href='#exp') My Goals
             li: a.large(href='#news') &nbsp;
@@ -30,6 +30,32 @@ html
             li: a.large(href='#github') &nbsp;
             li: a.large-blue(href='#linkedin') Resume
             li: a.large(href='#contact') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') Skills
+            li: a.large(href='/') Classes
+            li: a.large(href='#') Projects
+            li: a.large(href='#') Groups
+            li: a.large(href='#coursework') Education
+            li: a.large(href='#exp') Download
+            li: a.large(href='#news') &nbsp;
+            li: a.large(href='#about') &nbsp;
+            li: a.large(href='#github') &nbsp;
+            li: a.large-blue(href'/') Contact Me
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href'/') &nbsp;
+            li: a.large(href='/') &nbsp;
+            li: a.large(href='#') Mailing 
+            li: a.large(href='#') Github
+            li: a.large(href='#coursework') Phone
+            li: a.large(href='#exp') Email
+            li: a.large(href='#') &nbsp;
+
+
 
         .main-content
             block content
