--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -7,11 +7,11 @@ html
         .header
             h1.page-title Jason Zheng
             ul.subtitle
-                lo: a.mini(href = '#') About Me
+                lo#a: a.mini(href = '#') About Me
                 lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                lo: a.mini(href = '#') Resume
+                lo#r: a.mini(href = '#') Resume
                 lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                lo: a.mini(href = '#') Contact Me
+                lo#c: a.mini(href = '#') Contact Me
         ul.nav
             li: a.large(href'/') &nbsp;
             li: a.large-blue(href'/') About Me
