button colors work now

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -9,6 +9,7 @@
         font-family 'Source Code Pro', monospace
 
     .header
+        top 100px
         height 325px
 
      @keyframes fadein 
@@ -28,12 +29,14 @@
         height 0px
         text-align center
         margin 50px 0px  0px -4000px
+        overflow hidden
 
     .subtitle
         background #fff
         text-align center
         animation: fadein 1s;
         height 50px
+        color #000
 
     lo
         display inline-block
@@ -46,6 +49,7 @@
 
         &:hover
             color #1ac6ff
+            cursor pointer
 
     .mini-blue
         color #1ac6ff
