--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,6 +8,7 @@
   font-family: 'Source Code Pro', monospace;
 }
 * .header {
+  top: 100px;
   height: 325px;
 }
 * .page-title {
@@ -23,12 +24,14 @@
   height: 0px;
   text-align: center;
   margin: 50px 0px 0px -4000px;
+  overflow: hidden;
 }
 * .subtitle {
   background: #fff;
   text-align: center;
   animation: fadein 1s;
   height: 50px;
+  color: #000;
 }
 * lo {
   display: inline-block;
@@ -41,6 +44,7 @@
 }
 * .mini:hover {
   color: #1ac6ff;
+  cursor: pointer;
 }
 * .mini-blue {
   color: #1ac6ff;
