--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -8,7 +8,7 @@ html
             h1.page-title Jason Zheng
             ul.subtitle
                 lo: div.mini#a About Me
-                lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
+                lo:  &nbsp;&nbsp;   &middot;   &nbsp;&nbsp;
                 lo: div.mini#r Resume
                 lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
                 lo: div.mini#c Contact Me
@@ -42,7 +42,7 @@ html
             li: a.large(href='#news') &nbsp;
             li: a.large(href='#about') &nbsp;
             li: a.large(href='#github') &nbsp;
-            li: a.large-blue(href'/') Contact Me
+            li: a.large-blue(href'/') Contact
             li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
             li: a.large(href'/') &nbsp;
