--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -45,7 +45,6 @@
         animation-delay: 1s;
         animation-fill-mode: forwards;
         height 30px
-        //margin-bottom 20px
         color #000
 
     lo
@@ -73,6 +72,13 @@
         margin 5px 2.5px 5px 2.5px
         background-color white
         
+    .large-static
+        background-color #fff
+        padding-top 48.5px
+        display inline-block
+        height 115px
+        width 115px
+    
     .large
         font-size 20px
         color #1ac6ff
@@ -81,6 +87,7 @@
         height 115 px;
         width 115 px;
         text-decoration none
+        cursor pointer
 
         &:hover
             background-color #1ac6ff
