--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -13,47 +13,47 @@ html
                 lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
                 lo: div.mini#c Contact Me
         ul.nav
-            li: a.large(href'/') &nbsp;
-            li: a.large-blue(href'/') About Me
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href='/') &nbsp;
-            li: a.large(href='#') &nbsp; 
-            li: a.large(href='#') &nbsp;
+            li: div.large-static &nbsp;
+            li: div.large-blue About Me
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp; 
+            li: div.large &nbsp;
             li: a.large(href='#coursework') My Story 
             li: a.large(href='#exp') My Goals
-            li: a.large(href='#news') &nbsp;
-            li: a.large(href='#about') &nbsp;
-            li: a.large(href='#github') &nbsp;
-            li: a.large-blue(href='#linkedin') Resume
-            li: a.large(href='#contact') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
+            li: div.large#n &nbsp;
+            li: div.large-static &nbsp;
+            li: div.large#p &nbsp;
+            li: div.large-blue Resume
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
             li: a.large(href'/') Skills
             li: a.large(href='/') Classes
             li: a.large(href='#') Projects
             li: a.large(href='#') Groups
             li: a.large(href='#coursework') Education
             li: a.large(href='#exp') Download
-            li: a.large(href='#news') &nbsp;
-            li: a.large(href='#about') &nbsp;
-            li: a.large(href='#github') &nbsp;
-            li: a.large-blue(href'/') Contact
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href'/') &nbsp;
-            li: a.large(href='/') &nbsp;
+            li: div.large#n &nbsp;
+            li: div.large-static &nbsp;
+            li: div.large#p &nbsp;
+            li: div.large-blue Contact          
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
+            li: div.large &nbsp;
             li: a.large(href='#') Mailing 
             li: a.large(href='#') Github
             li: a.large(href='#coursework') Phone
             li: a.large(href='#exp') Email
-            li: a.large(href='#') &nbsp;
+            li: div.large-static &nbsp;
 
 
 
