--- a/static/css/index.css
+++ b/static/css/index.css
@@ -67,6 +67,13 @@
   margin: 5px 2.5px 5px 2.5px;
   background-color: #fff;
 }
+* .large-static {
+  background-color: #fff;
+  padding-top: 48.5px;
+  display: inline-block;
+  height: 115px;
+  width: 115px;
+}
 * .large {
   font-size: 20px;
   color: #1ac6ff;
@@ -75,6 +82,7 @@
   height: 115px;
   width: 115px;
   text-decoration: none;
+  cursor: pointer;
 }
 * .large:hover {
   background-color: #1ac6ff;
