deleted unneccesary stuff

--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -2,61 +2,11 @@ doctype html
 html
     head
         link(rel='stylesheet', href='/css/index.css')
-        title Jason zheng
+        title Jason Zheng
     body
         .header
-            h1.page-title Jason Zheng
-            ul.subtitle
-                lo: div.mini#a About Me
-                lo:  &nbsp;&nbsp;   &middot;   &nbsp;&nbsp;
-                lo: div.mini#r Resume
-                lo:  &nbsp;&nbsp;&middot;&nbsp;&nbsp;
-                lo: div.mini#c Contact Me
-        ul.nav
-            li: div.large-static &nbsp;
-            li: div.large-blue About Me
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp; 
-            li: div.large &nbsp;
-            li: a.large(href='#coursework') My Story 
-            li: a.large(href='#exp') My Goals
-            li: div.large#n &nbsp;
-            li: div.large-static &nbsp;
-            li: div.large#p &nbsp;
-            li: div.large-blue Resume
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: a.large(href'/') Skills
-            li: a.large(href='/') Classes
-            li: a.large(href='#') Projects
-            li: a.large(href='#') Groups
-            li: a.large(href='#coursework') Education
-            li: a.large(href='#exp') Download
-            li: div.large#n &nbsp;
-            li: div.large-static &nbsp;
-            li: div.large#p &nbsp;
-            li: div.large-blue Contact          
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: div.large &nbsp;
-            li: a.large(href='#') Mailing 
-            li: a.large(href='#') Github
-            li: a.large(href='#coursework') Phone
-            li: a.large(href='#exp') Email
-            li: div.large-static &nbsp;
-
-
-
+            h1.page-title ason heng
+            
         .main-content
             block content
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
