--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -12,6 +12,12 @@
         margin 90px 0px 20px 0px
         height 320px
 
+    .svg-sig
+        display: block
+        margin-left 110px
+        margin-top 175px
+        transform: scale(1.1,0.75);
+
      @keyframes fadein 
          from {opacity: 0; }
          to {opacity: 1;}
